# Shi-Thomasi-Corner-Detection

./: .gitignore  CMakeLists.txt  README.md  ShiTomasi.cpp
sources/information/: corner_detection_plan_en.docx
